# kafka-practice

./: .gitignore  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
Marketer/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
Marketer/migrations/: 20230419221721-offer.js
Marketer/migrations/sqls/: 20230419221721-offer-up.sql
Marketer/src/: index.ts
Marketer/src/controllers/: OfferController.ts
Marketer/src/models/: OfferModel.ts
Marketer/src/routes/: index.ts
Marketer/src/routes/api/: offers.ts
Marketer/src/tests/: offers.spec.ts
customer/: consumer.py  docker-compose.yml  requirements.txt  utils.py
customer/api/: models.py  serializers.py  tests.py  urls.py  views.py
customer/api/migrations/: 0001_initial.py
customer/customer/: settings.py  urls.py
customer/data/db/: postmaster.pid
customer/data/db/base/1/: 1259  2696  pg_internal.init
customer/data/db/base/5/: 1247  1249  1259  16388  16389  16394  16396  16397  16400  16402  16404  16405  16408  16414  16418  16422  16424  16430  16432  16436  16442  16444  16451  16453  16465  16467  16468  16481  16482  16494  16495  16496  16502  16503  16515  16516  16517  16518  16522  16523  (+28 more)
customer/data/db/global/: 1260  pg_control  pg_internal.init
customer/data/db/pg_stat/: pgstat.stat
